text changes and contact me

--- a/arProject.html
+++ b/arProject.html
@@ -103,25 +103,27 @@
                 </div>
                 <div class="collapse" id="arText">
                     <div class="card card-body" id="collapseText">
-                        <h3>In this project, my team and I were
-                            challenged to create an experience
-                            involving AR. We decided to create a Top
-                            Down Shooter game with one player
-                            controlling the character through the
-                            computer’s Keyboard and mouse, and
-                            another player controlling the enemies
-                            and boss using Cards that we created.
-                            I learned a lot about the workflow of
-                            building a larger scale project on a team
-                            in a short amount of time during this
-                            project.
-                            The project was fun to build because I
-                            had the opportunity to create some cool
-                            sounds, sprites, and an Audio
-                            Statemachine that could be used to play
-                            sound effects when bullets were fired or
-                            the dash button was pressed.
-                        </h3>
+                        <h3>Overview:</h3>
+                        <p>This project challenged our team to create an immersive gaming experience utilizing AR technology. 
+                            We opted to develop a unique twist on the traditional top-down shooter genre, 
+                            where one player controls the protagonist using a computer keyboard and mouse, 
+                            while another player commands enemies and bosses using specially designed cards.
+                        </p>
+                        <h3>Goals:</h3>
+                        <p>The primary goal of the project was to leverage AR technology to create an interactive and engaging gaming experience that blends 
+                            physical and digital elements seamlessly. By incorporating innovative gameplay mechanics and real-world interaction through the use of cards, 
+                            we aimed to push the boundaries of traditional gaming experiences and explore new possibilities in AR game design.</p>
+                        <h3>Insights & Skills:</h3>
+                        <p>Throughout the project, I gained valuable insights into the collaborative workflow of developing a larger-scale project within a team and under time constraints. 
+                            Working alongside teammates, I learned how to effectively communicate and coordinate tasks, manage resources, and navigate the complexities of collaborative game development.</p>
+                        <h3>Key Learnings:</h3>
+                        <p>One of the key takeaways from this project was the importance of effective teamwork and communication in achieving project goals. 
+                            By collaborating with teammates with diverse skills and expertise, I gained a deeper understanding of the iterative development process and the 
+                            significance of clear communication and coordination in delivering a cohesive and polished product.</p>
+                        <h3>Why I took the project:</h3>
+                        <p>The project presented an exciting opportunity to explore the intersection of AR technology and game design. 
+                            I was drawn to the project by the prospect of pushing the boundaries of traditional gaming experiences and experimenting with innovative gameplay mechanics. 
+                            Additionally, the opportunity to contribute to various aspects of the game, including sound design and sprite creation, made the project a rewarding and enjoyable endeavor.</p>
                     </div>
                 </div>
             </div>
