--- a/caveProject.html
+++ b/caveProject.html
@@ -65,26 +65,27 @@
                 </div>
                 <div class="collapse" id="caveText">
                     <div class="card card-body" id="collapseText">
-                        <h3>The artifact is about showcasing my first
-                        experience delving into game design and
-                        showcasing my art and storytelling style.
-                        The game is a spin off of the first half of
-                        Plato’s Allegory of the Cave and figuring
-                        out how to translate the ideas present in
-                        that text was the highlight of my
-                        experience.
-                        I learned so much about how game
-                        engines work and how to solve problems I
-                        was having in order to integrate new
-                        mechanics into my game from this
-                        project.
-                        The project was fun to build because it
-                        was my brainchild. I made every aspect of
-                        it and ideating about all the ways the
-                        game could go was a great exercise in
-                        having a good idea and seeing how far it can
-                        take you.
-                        </h3>
+                        <h3>Overview:</h3>
+                        <p>The Cave serves as a creative outlet to showcase my foray into game design while highlighting my unique art and storytelling style. 
+                            Inspired by Plato's Allegory of the Cave, the game explores philosophical themes in an interactive narrative format, 
+                            offering players a thought-provoking experience.
+                        </p>
+                        <h3>Goals:</h3>
+                        <p>The primary goal of the project was to translate the profound ideas present in Plato's text into an engaging and interactive gaming experience. 
+                            Through careful consideration of game mechanics and narrative design, the aim was to capture the essence of the allegory while providing players 
+                            with a difficult platformer to supplement the challenge that Plato poses in his Allegory.</p>
+                        <h3>Insights & Skills:</h3>
+                        <p>Throughout the development process, I gained valuable insights into game design principles and problem-solving techniques. Delving into game engines, 
+                            I acquired a deeper understanding of their functionalities and learned how to overcome challenges to integrate new mechanics into the game. Additionally, 
+                            the project allowed me to further develop my art and storytelling abilities, as I explored different ways to express complex concepts within a game environment.</p>
+                        <h3>Key Learnings:</h3>
+                        <p>One of the key takeaways from this project was the importance of creativity and ideation in game design. By conceptualizing and implementing every aspect of the game, 
+                            I honed my skills in idea generation and iteration, pushing the boundaries of my creativity to see how far a concept could be realized in a game format. Moreover, 
+                            the experience provided invaluable lessons in problem-solving and adaptability, as I navigated the complexities of game development.</p>
+                        <h3>Why I took the project:</h3>
+                        <p>The Allegory of the Cave Game was a passion project born out of my love for storytelling, art, and philosophy. As the sole creator of the game, 
+                            I relished the opportunity to bring my vision to life and explore the depths of game design. The project served as a testament to my creative vision 
+                            and served as a platform for personal growth and exploration.</p>
                     </div>
                 </div>
             </div>
