--- a/entangledProject.html
+++ b/entangledProject.html
@@ -65,16 +65,29 @@
                 </div>
                 <div class="collapse" id="entangledText">
                     <div class="card card-body" id="collapseText">
-                        <h3>This is a Web comic / app that I worked on with other developers 
-                            that aims to explain how quantum entanglement works.
-                            I learned a lot about how to condense big and convoluted ideas into easily 
-                            understood allegories in this project. I wrote the script for the comic, 
-                            and we as a team brainstormed ways to further visualize entanglement. 
-                            My biggest contribution to this visualization was to create a matching game 
-                            that populates a grid of prefabs randomly every time it is loaded.
-                            The project was fun to build because I really liked the team I was working with 
-                            and the ideas we had to showcase this thing.
-                        </h3>
+                        <h3>Overview:</h3>
+                        <p>Entangled is a collaborative effort aimed at demystifying the concept of quantum entanglement through 
+                            engaging storytelling and interactive visuals. The project combines elements of web comics and 
+                            interactive applications to provide users with an accessible and informative exploration of this complex scientific phenomenon.
+                        </p>
+                        <h3>Goals:</h3>
+                        <p>The primary goal of the project was to create a multimedia experience that effectively communicates the intricacies of quantum entanglement 
+                            in a way that is easy to understand and engaging for a wide audience. 
+                            Through the integration of storytelling, visuals, and interactive elements, the aim was to break 
+                            down complex concepts into digestible allegories and interactive components.</p>
+                        <h3>Insights & Skills:</h3>
+                        <p>Throughout the project, I gained valuable experience in distilling complex ideas into easily understood narratives and visuals. 
+                            By writing the script for the comic and collaborating with the team to brainstorm visualization techniques, 
+                            I honed my ability to condense big and convoluted concepts into accessible content. Additionally, my contribution to creating a 
+                            matching game to visualize entanglement further enhanced my skills in interactive design and development.</p>
+                        <h3>Key Learnings:</h3>
+                        <p>One of the key learnings from this project was the importance of interdisciplinary collaboration in effectively communicating complex ideas. 
+                            By working closely with other developers and creatives, I gained insights into different perspectives and approaches to storytelling and visualization. 
+                            Additionally, the project provided an opportunity to expand my technical skills, particularly in game development and interactive design.</p>
+                        <h3>Why I took the project:</h3>
+                        <p>I was drawn to the Quantum Entanglement Web Comic & App project because of my passion for both science and creative storytelling. 
+                            I saw it as an exciting opportunity to combine my interests in software development, digital art, and science communication to create something innovative and educational. 
+                            Moreover, the collaborative nature of the project and the enthusiasm of the team made it a rewarding and enjoyable endeavor.</p>
                     </div>
                 </div>
             </div>
@@ -239,6 +252,21 @@
                 </div>
             </div>
             <hr>
+            <!-- section title Audio -->
+            <div class="row">
+                <h3>Audio</h3>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <audio controls>
+                        <source src="Assets\Audio Files\Entangled\EDM_love_song_garbage.wav" type="audio/wav">
+                        Your browser does not support the audio element.
+                    </audio>
+                    <h5>Dating Game Song</h5>
+                </div>
+            </div>
+            <hr>
+            
             <!-- section title CODE -->
             <div class="row">
                 <h3>Code</h3>
