--- a/tx2dayProject.html
+++ b/tx2dayProject.html
@@ -65,24 +65,27 @@
                 </div>
                 <div class="collapse" id="collapseExample">
                     <div class="card card-body" id="collapseText">
-                        <h3>The artifact is about my work on the
-                        website / webapp Tx2Day, which is a new
-                        way to approach therapy documentation.
-                        The webapp is focused on simplifying the
-                        documentation of visits and the hassle of
-                        scheduling for government-backed
-                        therapy businesses.
-                        While working on this project, I had the
-                        opportunity to showcase the user
-                        experience design skills I learned in my
-                        first year of GIMM in meetings with
-                        clients.
-                        This project was fun to build because I
-                        had multiple chances for client feedback
-                        while designing the face of Tx2Day and
-                        was able to incorporate what they wanted
-                        into the design while staying away from
-                        bland theming.</h3>
+                        <h3>Overview:</h3>
+                        <p>Tx2Day is a revolutionary web application aimed at simplifying therapy documentation processes. 
+                            Designed to streamline visit documentation and scheduling for government-backed therapy businesses, 
+                            Tx2Day redefines the user experience in therapy management.</p>
+                        <h3>Goals:</h3>
+                        <p>The primary goal of the Tx2Day project was to create a user-friendly platform that addresses the 
+                            complexities of therapy documentation and scheduling. Through innovative design and functionality, 
+                            the aim was to enhance efficiency and reduce administrative burdens for therapy practitioners.</p>
+                        <h3>Insights & Skills:</h3>
+                        <p>Throughout the project, I had the opportunity to leverage and showcase the user experience design skills 
+                            I acquired during my first year of studies in the GIMM program. Engaging with clients, I applied these skills 
+                            to conceptualize and develop a platform that prioritizes usability and functionality.</p>
+                        <h3>Key Learnings:</h3>
+                        <p>The project provided valuable insights into client collaboration and iterative design processes. 
+                            By incorporating client feedback into the development cycle, I gained a deeper understanding of user needs and preferences, 
+                            further refining the interface to ensure an optimal user experience.</p>
+                        <h3>Why I took the project:</h3>
+                        <p>What made the Tx2Day project particularly enjoyable was the iterative nature of the design process. 
+                            By continuously refining and enhancing the platform based on client input, I was able to create a solution that not only 
+                            meets user requirements but also exceeds expectations. Additionally, the creative freedom to design the interface 
+                            while incorporating client preferences allowed for a fulfilling and dynamic development experience.</p>
                     </div>
                 </div>
             </div>
@@ -142,6 +145,13 @@
                 </div>
             </div>
             <hr>
+            <!-- section title paper prototyping -->
+            <div class="row">
+                <div class="col-12">
+                    <h3>Paper Prototyping</h3>
+                </div>
+            </div>
+            <!-- first row of pictures -->
         </div>
     </div>
     
