--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <h1>UNDER CONSTRUCTION</h1>
     <hr>
-    
+
     <div>
         <nav class="nav nav-pills nav-fill">
             <a class="nav-item nav-link active" href="index.html">Home</a>
@@ -42,12 +42,7 @@
                     <h1>Alin Olson</h1>
                 </div>
                 <div class="col-6">
-                    <h3>(they/them)</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <h5>The Dreamer</h5>
+                    <h2>multimedia developer</h2>
                 </div>
             </div>
         </div>
@@ -57,29 +52,54 @@
         <div class="container-fluid" id="intro">
             <div class="row">
                 <div class="col-md-6">
-                    <h3>Whatever Alin (they/them) does, they do it
-                        with an unwavering conviction. Ever since
-                        2018, they have been making music,
-                        designing logos, making digital art,
-                        polishing coding skills, and putting out
-                        unique and interesting art into the world.
-                    </h3>
-                    <hr>
-                    <h3>Alin is the Financial Officer of Boise State's
-                        Game Dev Club, a Verified artist on Spotify, and a
-                        Peer Mentor (and student) in the GIMM degree at
-                        Boise State University.
-                    </h3>
+                    <h5>Alin (they/them) approaches each endeavor with unwavering
+                        dedication and conviction. Since 2018, their creative journey
+                        has encompassed a diverse array of disciplines, including music composition,
+                        logo design, digital artistry, and honing coding proficiency.
+                        Throughout this journey, Alin consistently strives to produce distinctive
+                        and compelling work, contributing their unique perspective to the world of
+                        art and innovation.
+                        </h3>
+                        <hr>
+                        <h5>Alin serves as the Financial Officer of Boise State University's
+                            Game Development Club, holds the distinction of being a Verified Artist on Spotify,
+                            and actively participates as a Peer Mentor within the GIMM Major at Boise State University,
+                            all while maintaining their status as a full-time student in the degree.
+                            </h3>
                 </div>
                 <div class="col-md-6">
-                    <img class="curvedImg img-fluid" src="Assets\Pics\cover_photo.png" alt="Alin on the railing">
+                    <img class="curvedImg img-fluid" src="Assets\Pics\cover_photo.png" alt="A headshot of me">
                 </div>
             </div>
         </div>
-        <div class="container-fluid" id=""
-    </div>
-    
-
+        <div class="container-fluid" id="contactMe">
+            <div class="row">
+                <div class="col-12">
+                    <h3>Contact Me</h3>
+                </div>
+            </div>
+            <form action="https://formspree.io/f/xzbnggae" method="POST"></form>
+            <div class="row">
+                <div class="col-6">
+                    <label for="name">Your Name:</label><br>
+                    <input type="text" id="name" name="name" required><br>
+                </div>
+                <div class="col-6">
+                    <label for="email">Your Email:</label><br>
+                    <input type="email" id="email" name="_replyto" required><br>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <label for="message">Your Message:</label><br>
+                    <textarea id="message" name="message" required></textarea>
+                </div>                        
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <button type="submit">Send</button>
+                </div>
+            </form>
 </body>
 
 </html>
