--- a/arProject.html
+++ b/arProject.html
@@ -61,19 +61,19 @@
                             </div>
                             <div class="carousel-item" data-bs-interval="5000">
                                 <img src="Assets\Pics\AR\AR_GameManager.png" class="d-block w-100 img-fluid"
-                                    alt="Game management code">
+                                    alt="Game management code" loading="lazy">
                             </div>
                             <div class="carousel-item" data-bs-interval="5000">
                                 <img src="Assets\Pics\AR\AR_SoundManager.png" class="d-block w-100 img-fluid"
-                                    alt="Sound management code">
+                                    alt="Sound management code" loading="lazy">
                             </div>
                             <div class="carousel-item" data-bs-interval="5000">
                                 <img src="Assets\Pics\AR\AR_Code.png" class="d-block w-100 img-fluid" 
-                                    alt="Circling target code">
+                                    alt="Circling target code" loading="lazy">
                             </div>
                             <div class="carousel-item" data-bs-interval="5000">
                                 <img src="Assets\Pics\AR\AR_Lvl2.png" class="d-block w-100 img-fluid" 
-                                    alt="A screenshot of level 2">
+                                    alt="A screenshot of level 2" loading="lazy">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
@@ -145,19 +145,19 @@
                 <div class="row">
                     <div class="col-md-3">
                         <h5>Idle</h5>
-                        <img src="Assets\Pics\AR\RufusIdle.gif" alt="Rufus Idle" class="img-fluid">
+                        <img src="Assets\Pics\AR\RufusIdle.gif" alt="Rufus Idle" class="img-fluid" loading="lazy">
                     </div>
                     <div class="col-md-3">
                         <h5>Normal Dice Roll</h5>
-                        <img src="Assets\Pics\AR\RufusDiceRoll.gif" alt="Rufus Roll" class="img-fluid">
+                        <img src="Assets\Pics\AR\RufusDiceRoll.gif" alt="Rufus Roll" class="img-fluid" loading="lazy">
                     </div>
                     <div class="col-md-3">
                         <h5>Nat 20 Roll</h5>
-                        <img src="Assets\Pics\AR\Rufus20.gif" alt="Rufus Nat 20" class="img-fluid">
+                        <img src="Assets\Pics\AR\Rufus20.gif" alt="Rufus Nat 20" class="img-fluid" loading="lazy">
                     </div>
                     <div class="col-md-3">
                         <h5>Nat 1 Roll</h5>
-                        <img src="Assets\Pics\AR\RufusNatOne.gif" alt="Rufus Nat 1" class="img-fluid">
+                        <img src="Assets\Pics\AR\RufusNatOne.gif" alt="Rufus Nat 1" class="img-fluid" loading="lazy">
                     </div>
                 </div>
                 <!-- stumpy subsec-->
@@ -170,7 +170,7 @@
                 <div class="row">
                     <div class="col-12">
                         <h5>Idle</h5>
-                        <img src="Assets\Pics\AR\Stumpy.gif" alt="Stumpy Idle" class="img-fluid">
+                        <img src="Assets\Pics\AR\Stumpy.gif" alt="Stumpy Idle" class="img-fluid" loading="lazy">
                     </div>
                 </div>
                 <!-- boss subsec-->
@@ -183,7 +183,7 @@
                 <div class="row">    
                     <div class="col-12">
                         <h5>Idle</h5>
-                        <img src="Assets/Pics/AR/BossIdle.gif" alt="Boss Animation" class="img-fluid">
+                        <img src="Assets/Pics/AR/BossIdle.gif" alt="Boss Animation" class="img-fluid" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -262,15 +262,15 @@
             <div class="row">
                 <div class="col-md-4">
                     <h5>Full</h5>
-                    <img src="Assets\Pics\AR\Mana1.png" alt="Mana Full" class="img-fluid">
+                    <img src="Assets\Pics\AR\Mana1.png" alt="Mana Full" class="img-fluid" loading="lazy">
                 </div>
                 <div class="col-md-4">
                     <h5>Half</h5>
-                    <img src="Assets\Pics\AR\Mana2.png" alt="Mana Half" class="img-fluid">
+                    <img src="Assets\Pics\AR\Mana2.png" alt="Mana Half" class="img-fluid" loading="lazy">
                 </div>
                 <div class="col-md-4">
                     <h5>Empty</h5>
-                    <img src="Assets\Pics\AR\Mana3.png" alt="Mana Empty" class="img-fluid">
+                    <img src="Assets\Pics\AR\Mana3.png" alt="Mana Empty" class="img-fluid" loading="lazy">
                 </div>
             </div>
             <!-- heart subsec -->
@@ -283,15 +283,15 @@
             <div class="row">
                 <div class="col-md-4">
                     <h5>Full</h5>
-                    <img src="Assets\Pics\AR\Hearts1.png" alt="Heart Full" class="img-fluid">
+                    <img src="Assets\Pics\AR\Hearts1.png" alt="Heart Full" class="img-fluid" loading="lazy">
                 </div>
                 <div class="col-md-4">
                     <h5>Half</h5>
-                    <img src="Assets\Pics\AR\Hearts2.png" alt="Heart Half" class="img-fluid">
+                    <img src="Assets\Pics\AR\Hearts2.png" alt="Heart Half" class="img-fluid" loading="lazy">
                 </div>
                 <div class="col-md-4">
                     <h5>Empty</h5>
-                    <img src="Assets\Pics\AR\Hearts3.png" alt="Heart Empty" class="img-fluid">
+                    <img src="Assets\Pics\AR\Hearts3.png" alt="Heart Empty" class="img-fluid" loading="lazy">
                 </div>
             </div>
             <hr>
