--- a/caveProject.html
+++ b/caveProject.html
@@ -143,22 +143,22 @@
                     <div class="col-3">
                         <h5>Cosmo Idle</h5>
                         <img src="Assets\Pics\TheCave\Cosmo_Idle.gif" class="img-fluid"
-                            alt="Cosmo's Idle Animation">
+                            alt="Cosmo's Idle Animation" loading="lazy">
                     </div>
                     <div class="col-3">
                         <h5>Shadow Idle</h5>
                         <img src="Assets\Pics\TheCave\Shadow_Idle.gif" class="img-fluid"
-                            alt="Shadow Idle Animation">
+                            alt="Shadow Idle Animation" loading="lazy">
                     </div>
                     <div class="col-3">
                         <h5>Cosmo Walk</h5>
                         <img src="Assets\Pics\TheCave\Cosmo_Walk.gif" class="img-fluid"
-                            alt="Cosmo's Walking Animation">
+                            alt="Cosmo's Walking Animation" loading="lazy">
                     </div>
                     <div class="col-3">
                         <h5>Shadow Walk</h5>
                         <img src="Assets\Pics\TheCave\Shadow_Walk.gif" class="img-fluid"
-                            alt="Shadow Walking Animation">
+                            alt="Shadow Walking Animation" loading="lazy">
                     </div>
                 </div>
                 <!-- collectable subsec-->
@@ -173,7 +173,7 @@
                     <div class="col-4">
                         <h5>Collectable bounce</h5>
                         <img src="Assets\Pics\TheCave\DiamondSprite.gif" class="img-fluid"
-                            alt="Diamond Animation">
+                            alt="Diamond Animation" loading="lazy">
                     </div>
                     <div class="col-4"></div>
                 </div>
@@ -194,23 +194,23 @@
                         <div class="carousel-inner">
                             <div class="carousel-item active" data-bs-interval="15000">
                                 <img src="Assets\Pics\TheCave\theCaveOpenScene.gif" class="d-block w-100 img-fluid"
-                                    alt="The opening GIF of The Cave">
+                                    alt="The opening GIF of The Cave" loading="lazy">
                             </div>
                             <div class="carousel-item" data-bs-interval="5000">
                                 <img src="Assets\Pics\TheCave\TheCaveCollisionCode.png" class="d-block w-100 img-fluid"
-                                    alt="The Cave collision code screenshot">
+                                    alt="The Cave collision code screenshot" loading="lazy">
                             </div>
                             <div class="carousel-item" data-bs-interval="5000">
                                 <img src="Assets\Pics\TheCave\TheCaveDirectionChangeCode.png" class="d-block w-100 img-fluid"
-                                    alt="The Cave direction change code screenshot">
+                                    alt="The Cave direction change code screenshot" loading="lazy">
                             </div>
                             <div class="carousel-item" data-bs-interval="5000">
                                 <img src="Assets\Pics\TheCave\TheCavePhysicsCode.png" class="d-block w-100 img-fluid"
-                                    alt="The Cave physics Code screenshot">
+                                    alt="The Cave physics Code screenshot" loading="lazy">
                             </div>
                             <div class="carousel-item" data-bs-interval="15000">
                                 <img src="Assets\Pics\TheCave\theCaveOutro.gif" class="d-block w-100 img-fluid"
-                                    alt="The closing GIF of The Cave">
+                                    alt="The closing GIF of The Cave" loading="lazy">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
@@ -231,15 +231,15 @@
                 <!-- more gifs -->
                 <div class="col-4">
                     <img src="Assets\Pics\TheCave\DiamondSprite.gif" class="img-fluid"
-                        alt="Diamond Animation">
+                        alt="Diamond Animation" loading="lazy">
                 </div>
                 <div class="col-4">
                     <img src="Assets\Pics\TheCave\DiamondSprite.gif" class="img-fluid"
-                        alt="Diamond Animation">
+                        alt="Diamond Animation" loading="lazy">
                 </div>
                 <div class="col-4">
                     <img src="Assets\Pics\TheCave\DiamondSprite.gif" class="img-fluid"
-                        alt="Diamond Animation">
+                        alt="Diamond Animation" loading="lazy">
                 </div>
             </div>
             <hr>
