--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             </h3>
                 </div>
                 <div class="col-md-6">
-                    <img class="curvedImg img-fluid" src="Assets\Pics\cover_photo.png" alt="A headshot of me">
+                    <img class="curvedImg img-fluid" src="Assets\Pics\cover_photo.png" alt="A headshot of me" loading="eager">
                 </div>
             </div>
         </div>
