--- a/tx2dayProject.html
+++ b/tx2dayProject.html
@@ -120,15 +120,15 @@
                             </div>
                             <div class="carousel-item" data-bs-interval="5000">
                                 <img src="Assets\Pics\Tx2Day\Tx2Day_Daily_Report.png" class="d-block w-100"
-                                    alt="Daily Report">
+                                    alt="Daily Report" loading="lazy">
                             </div>
                             <div class="carousel-item" data-bs-interval="5000">
                                 <img src="Assets\Pics\Tx2Day\Tx2Day_Location_Schedule.png" class="d-block w-100"
-                                    alt="Location Schedule">
+                                    alt="Location Schedule" loading="lazy">
                             </div>
                             <div class="carousel-item" data-bs-interval="5000">
                                 <img src="Assets\Pics\Tx2Day\Tx2Day_Visit.png" class="d-block w-100"
-                                    alt="Visit Page">
+                                    alt="Visit Page" loading="lazy">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
