--- a/tx2dayProject.html
+++ b/tx2dayProject.html
@@ -19,19 +19,39 @@
 </head>
 
 <body>
-    <h1>UNDER CONSTRUCTION</h1>
     <hr>
     
-    <div>
-        <nav class="nav nav-pills nav-fill">
-            <a class="nav-item nav-link" href="index.html">Home</a>
-            <a class="nav-item nav-link" href="caveProject.html">The Cave</a>
-            <a class="nav-item nav-link active" href="tx2dayProject.html">Tx2Day</a>
-            <a class="nav-item nav-link" href="arProject.html">Wizard AR</a>
-            <a class="nav-item nav-link" href="entangledProject.html">Entangled</a>
-            <a class="nav-item nav-link" href="musicProjects.html">My Music</a>
-        </nav>
-    </div>
+    <nav class="navbar navbar-expand-md navbar-light sticky-top" id="navBG">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="caveProject.html">The Cave</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="tx2dayProject.html">Tx2Day</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="arProject.html">Wizard AR</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="entangledProject.html">Entangled</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="musicProjects.html">My Music</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
 
     <hr>
 
