quality of life

--- a/musicProjects.html
+++ b/musicProjects.html
@@ -21,34 +21,34 @@
     <hr>
     <nav class="navbar navbar-expand-md navbar-light sticky-top" id="navBG">
         <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="caveProject.html">The Cave</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="tx2dayProject.html">Tx2Day</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="arProject.html">Wizard AR</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="entangledProject.html">Entangled</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="musicProjects.html">My Music</a>
-              </li>
-            </ul>
-          </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item col">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item col">
+                        <a class="nav-link" href="caveProject.html">The Cave</a>
+                    </li>
+                    <li class="nav-item col">
+                        <a class="nav-link" href="tx2dayProject.html">Tx2Day</a>
+                    </li>
+                    <li class="nav-item col">
+                        <a class="nav-link" href="arProject.html">Wizard AR</a>
+                    </li>
+                    <li class="nav-item col">
+                        <a class="nav-link" href="entangledProject.html">Entangled</a>
+                    </li>
+                    <li class="nav-item col">
+                        <a class="nav-link active" href="musicProjects.html">My Music</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
+    </nav>
     <hr>
     <div id="contentDiv">
         <div class="container-fluid" id="music">
@@ -68,11 +68,11 @@
             <div class="row" id="gradient3">
                 <div class="col-12">
                     <p>
-                        <button class="btn btn-primary" type="button" 
+                        <button class="btn btn-secondary" type="button" 
                         data-bs-toggle="collapse" data-bs-target="#fastCarText" 
                         aria-expanded="false" aria-controls="fastCarText"
                         id="myCollapseButton">
-                        A small excerpt about the project
+                        Click here for a brief breakdown of the song
                         </button>
                     </p>
                 </div>
@@ -97,11 +97,11 @@
             <div class="row" id="gradient4">
                 <div class="col-12">
                     <p>
-                        <button class="btn btn-primary" type="button" 
+                        <button class="btn btn-secondary" type="button" 
                         data-bs-toggle="collapse" data-bs-target="#dreaminText" 
                         aria-expanded="false" aria-controls="dreaminText"
                         id="myCollapseButton">
-                        A small excerpt about the project
+                        Click here for a brief breakdown of the album
                         </button>
                     </p>
                 </div>
@@ -147,11 +147,11 @@
             <div class="row" id="gradient5">
                 <div class="col-12">
                     <p>
-                        <button class="btn btn-primary" type="button" 
+                        <button class="btn btn-secondary" type="button" 
                         data-bs-toggle="collapse" data-bs-target="#metaphorText" 
                         aria-expanded="false" aria-controls="metaphorText"
                         id="myCollapseButton">
-                        A small excerpt about the project
+                        Click here for a brief breakdown of the song
                         </button>
                     </p>
                 </div>
@@ -194,11 +194,11 @@
             <div class="row" id="gradient6">
                 <div class="col-12">
                     <p>
-                        <button class="btn btn-primary" type="button" 
+                        <button class="btn btn-secondary" type="button" 
                         data-bs-toggle="collapse" data-bs-target="#weAreStardustText" 
                         aria-expanded="false" aria-controls="weAreStardustText"
                         id="myCollapseButton">
-                        A small excerpt about the project
+                        Click here for a brief breakdown of the song
                         </button>
                     </p>
                 </div>
@@ -224,11 +224,11 @@
             <div class="row" id="gradient7">
                 <div class="col-12">
                     <p>
-                        <button class="btn btn-primary" type="button" 
+                        <button class="btn btn-secondary" type="button" 
                         data-bs-toggle="collapse" data-bs-target="#lifeIsGoodText" 
                         aria-expanded="false" aria-controls="lifeIsGoodText"
                         id="myCollapseButton">
-                        A small excerpt about the project
+                        Click here for a brief breakdown of the song
                         </button>
                     </p>
                 </div>
@@ -257,11 +257,11 @@
             <div class="row" id="gradient8">
                 <div class="col-12">
                     <p>
-                        <button class="btn btn-primary" type="button" 
+                        <button class="btn btn-secondary" type="button" 
                         data-bs-toggle="collapse" data-bs-target="#distractionText" 
                         aria-expanded="false" aria-controls="distractionText"
                         id="myCollapseButton">
-                        A small excerpt about the project
+                        Click here for a brief breakdown of the song
                         </button>
                     </p>
                 </div>
@@ -288,11 +288,11 @@
             <div class="row" id="gradient9">
                 <div class="col-12">
                     <p>
-                        <button class="btn btn-primary" type="button" 
+                        <button class="btn btn-secondary" type="button" 
                         data-bs-toggle="collapse" data-bs-target="#rainstormText" 
                         aria-expanded="false" aria-controls="rainstormText"
                         id="myCollapseButton">
-                        A small excerpt about the project
+                        Click here for a brief breakdown of the song
                         </button>
                     </p>
                 </div>
@@ -317,11 +317,11 @@
             <div class="row" id="gradient10">
                 <div class="col-12">
                     <p>
-                        <button class="btn btn-primary" type="button" 
+                        <button class="btn btn-secondary" type="button" 
                         data-bs-toggle="collapse" data-bs-target="#postedPrettyText" 
                         aria-expanded="false" aria-controls="postedPrettyText"
                         id="myCollapseButton">
-                        A small excerpt about the project
+                        Click here for a brief breakdown of the song
                         </button>
                     </p>
                 </div>
