--- a/index.html
+++ b/index.html
@@ -21,37 +21,36 @@
 <body>
 
     <hr>
-
     <nav class="navbar navbar-expand-md navbar-light sticky-top" id="navBG">
         <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="caveProject.html">The Cave</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="tx2dayProject.html">Tx2Day</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="arProject.html">Wizard AR</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="entangledProject.html">Entangled</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="musicProjects.html">My Music</a>
-              </li>
-            </ul>
-          </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item col">
+                        <a class="nav-link active" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item col">
+                        <a class="nav-link" href="caveProject.html">The Cave</a>
+                    </li>
+                    <li class="nav-item col">
+                        <a class="nav-link" href="tx2dayProject.html">Tx2Day</a>
+                    </li>
+                    <li class="nav-item col">
+                        <a class="nav-link" href="arProject.html">Wizard AR</a>
+                    </li>
+                    <li class="nav-item col">
+                        <a class="nav-link" href="entangledProject.html">Entangled</a>
+                    </li>
+                    <li class="nav-item col">
+                        <a class="nav-link" href="musicProjects.html">My Music</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
+    </nav>
 
 
     <hr>
@@ -89,7 +88,8 @@
                             </h3>
                 </div>
                 <div class="col-md-6">
-                    <img class="curvedImg img-fluid" src="Assets\Pics\cover_photo.png" alt="A headshot of me" loading="eager">
+                    <img class="curvedImg img-fluid" src="Assets\Pics\cover_photo.png" alt="A headshot of me"
+                        loading="eager">
                 </div>
             </div>
         </div>
@@ -99,27 +99,27 @@
                     <h3>Contact Me</h3>
                 </div>
             </div>
-            <form action="https://formspree.io/f/xzbnggae" method="POST"></form>
-            <div class="row">
-                <div class="col-6">
-                    <label for="name">Your Name:</label><br>
-                    <input type="text" id="name" name="name" required><br>
+            <form action="https://formspree.io/f/xzbnggae" method="POST">
+                <div class="row">
+                    <div class="col-md-6">
+                        <label for="name">Your Name:</label><br>
+                        <input type="text" id="name" name="name" required><br>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="email">Your Email:</label><br>
+                        <input type="email" id="email" name="_replyto" required><br>
+                    </div>
                 </div>
-                <div class="col-6">
-                    <label for="email">Your Email:</label><br>
-                    <input type="email" id="email" name="_replyto" required><br>
+                <div class="row">
+                    <div class="col-12">
+                        <label for="message">Your Message:</label><br>
+                        <textarea id="message" name="message" required></textarea>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <label for="message">Your Message:</label><br>
-                    <textarea id="message" name="message" required></textarea>
-                </div>                        
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <button type="submit">Send</button>
-                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <button type="submit">Send</button>
+                    </div>
             </form>
 </body>
 
