--- a/tx2dayProject.html
+++ b/tx2dayProject.html
@@ -23,34 +23,34 @@
     
     <nav class="navbar navbar-expand-md navbar-light sticky-top" id="navBG">
         <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="caveProject.html">The Cave</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="tx2dayProject.html">Tx2Day</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="arProject.html">Wizard AR</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="entangledProject.html">Entangled</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="musicProjects.html">My Music</a>
-              </li>
-            </ul>
-          </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item col">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item col">
+                        <a class="nav-link" href="caveProject.html">The Cave</a>
+                    </li>
+                    <li class="nav-item col">
+                        <a class="nav-link active" href="tx2dayProject.html">Tx2Day</a>
+                    </li>
+                    <li class="nav-item col">
+                        <a class="nav-link" href="arProject.html">Wizard AR</a>
+                    </li>
+                    <li class="nav-item col">
+                        <a class="nav-link" href="entangledProject.html">Entangled</a>
+                    </li>
+                    <li class="nav-item col">
+                        <a class="nav-link" href="musicProjects.html">My Music</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
+    </nav>
 
 
     <hr>
@@ -79,7 +79,7 @@
                         data-bs-toggle="collapse" data-bs-target="#collapseExample" 
                         aria-expanded="false" aria-controls="collapseExample"
                         id="myCollapseButton">
-                        A small excerpt about the project
+                        Click here to learn about Tx2Day
                         </button>
                     </p>
                 </div>
