Commented Out Form Info for now

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
 <body>
 
     <hr>
+    <div class="row">
+        <div class="col-2">
+        </div>
+        <div class="col-8" id="navVertLeft navVertRight">
+            <h5>Projects</h5>
+        </div>
+        <div class="col-2" id="navVertRight">
+            <h5>Music</h5>
+        </div>
+    </div>
     <nav class="navbar navbar-expand-md navbar-light sticky-top" id="navBG">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -93,7 +103,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid" id="contactMe">
+        <!-- <div class="container-fluid" id="contactMe">
             <div class="row">
                 <div class="col-12">
                     <h3>Contact Me</h3>
@@ -121,6 +131,7 @@
                         <button type="submit">Send</button>
                     </div>
             </form>
+        </div> -->
 </body>
 
 </html>
